# rusk-vm

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  DUSK-SC.md  METERING.md  Makefile  README.md  VM.md  config.toml  example_config.toml  rust-toolchain  rustfmt.toml  test.sh
.github/workflows/: dusk_ci.yml
benches/: factorial.rs  fibonacci.rs  root.rs  stack.rs
contracts/add/: Cargo.toml
contracts/add/src/: lib.rs
contracts/basic/: Cargo.toml
contracts/basic/src/: lib.rs
contracts/default_account/: Cargo.toml
contracts/default_account/src/: lib.rs
contracts/factorial/: Cargo.toml
contracts/factorial/src/: lib.rs
contracts/panic/: Cargo.toml
contracts/store_in_deploy/: Cargo.toml
contracts/store_in_deploy/src/: lib.rs
contracts/strip_functions/: Cargo.toml
contracts/sub_token/: Cargo.toml
contracts/sub_token/src/: lib.rs
docs/: vm_compacting.md  vm_persistence_interface.md
dusk-abi/: Cargo.toml
dusk-abi/src/: bufwriter.rs  contract.rs  contract_call.rs  encoding.rs  helpers.rs  host.rs  hosted.rs  impl_serde.rs  lib.rs  panic.rs  panic_include.rs  provisioners.rs  signature.rs  tests.rs  types.rs  u256.rs
dusk-abi/src/hosted/: debug.rs
dusk-abi/src/types/: contract.rs  query.rs  return_value.rs  transaction.rs
dusk-derive/: Cargo.toml
dusk-derive/src/: lib.rs
genesis/: Cargo.toml
rusk-uplink/: Cargo.toml
rusk-uplink/src/: bufwriter.rs  debug.rs  definitions.rs  ffi_store.rs  ffi_wasmer_store.rs  framing.rs  helpers.rs  hosted.rs  items.rs  lib.rs  no_std_plumbing.rs
rusk-uplink_derive/: Cargo.toml
rusk-uplink_derive/src/: args.rs  derive_args.rs  lib.rs  macro_helper.rs
src/: abi_call.rs  call_context.rs  compiler.rs  compiler_config.rs  config.rs  contract.rs  contract_builder.rs  debug.rs  digest.rs  dummy_circ.rs  env.rs  error.rs  gas.rs  gasmonitor.rs  helpers.rs  host_fns.rs  lib.rs  linked_list.rs  memory.rs  module_config.rs  modules.rs  prepare_module.rs  resolver.rs  state.rs  traits.rs  transaction.rs  wallet.rs
src/interfaces/: default_account.rs  mod.rs
src/ops/: argument.rs  balance.rs  block_height.rs  bls.rs  call_contract.rs  call_data.rs  call_stack.rs  callee.rs  debug.rs  ed25519.rs  emit.rs  gas.rs  mod.rs  opcode.rs  panic.rs  phoenix_ops.rs  poseidon_hash.rs  query.rs  ret.rs  self_hash.rs  self_id.rs  storage.rs  store.rs  transact.rs  verify_proof.rs
src/ops/verify_proof/: circuit.rs  decoding.rs  dummy_circ.rs  mod.rs
src/state/: backend.rs  builder.rs  contracts.rs  hash.rs  persist.rs
test_contracts/basic/: Cargo.toml
test_contracts/basic/src/: lib.rs
test_contracts/store_in_deploy/: Cargo.toml
test_contracts/strip_functions/: Cargo.toml
test_contracts/strip_functions/src/: lib.rs
test_runner/: Cargo.toml
test_runner/runee/: Cargo.toml
test_runner/runee/src/: main.rs
test_runner/runner/: Cargo.toml
test_runner/runner/src/: main.rs
test_runner/src/: main.rs
tests/: Makefile  configuration.rs  configuration.rs2  dual_test.rs  gas_context.rs  gas_usage.rs  gasmonitor.rs  helpers.rs  lib.rs  multiple_state.rs  root.rs  stack.rs  stack.rs2
tests/config/: config.toml  expensive_config.toml  high_cost_config.toml  invalid_config.toml  no_metering_config.toml
tests/contracts/: mod.rs
tests/contracts/block_height/: Cargo.toml  Makefile
tests/contracts/block_height/src/: lib.rs
tests/contracts/callee-1/: Cargo.toml
tests/contracts/callee-1/src/: lib.rs
tests/contracts/callee-2/: Cargo.toml
tests/contracts/callee-2/src/: lib.rs
tests/contracts/caller/: Cargo.toml
tests/contracts/counter/: Cargo.toml  counter.wasm
tests/contracts/counter_float/: Cargo.toml
tests/contracts/default_account/: mod.rs
tests/contracts/default_account/wasm/: Cargo.toml
tests/contracts/default_account/wasm/src/: lib.rs
tests/contracts/delegator/: Cargo.toml  Makefile  delegator.wasm  rustfmt.toml
tests/contracts/delegator/src/: lib.rs
tests/contracts/error/: Cargo.toml
tests/contracts/events/: Cargo.toml
tests/contracts/factorial/: Cargo.toml  test.wasm
tests/contracts/factorial/src/: lib.rs
tests/contracts/factorial/wasm/: Cargo.toml
tests/contracts/factorial/wasm/src/: lib.rs
tests/contracts/fee/wasm/: Cargo.toml
tests/contracts/fee/wasm/src/: lib.rs
tests/contracts/fibonacci/: Cargo.toml  counter.wasm  fibonacci.wasm
tests/contracts/fibonacci/src/: lib.rs
tests/contracts/gas_consumed/: Cargo.toml  Makefile
tests/contracts/gas_context/: Cargo.toml
tests/contracts/hash/: Cargo.toml
tests/contracts/host_fn/: Cargo.toml
tests/contracts/map/: Cargo.toml
tests/contracts/map/src/: lib.rs
tests/contracts/minimal_counter/: Cargo.toml
tests/contracts/minimal_counter/src/: lib.rs  vm.rs
tests/contracts/minimal_poseidon/: Cargo.toml
tests/contracts/minimal_poseidon/src/: lib.rs
tests/contracts/minimal_transfer/: Cargo.toml
tests/contracts/minimal_transfer/src/: lib.rs
tests/contracts/register/: Cargo.toml
tests/contracts/register/src/: lib.rs
tests/contracts/stack/: Cargo.toml  Makefile
tests/contracts/stack/src/: lib.rs
tests/contracts/staking/wasm/: Cargo.toml
tests/contracts/staking/wasm/src/: lib.rs
tests/contracts/storage_factorial/: Cargo.toml
tests/contracts/storage_factorial/src/: lib.rs
tests/contracts/string_argument/: Cargo.toml
tests/contracts/string_argument/src/: lib.rs
tests/contracts/tx_vec/: Cargo.toml  Makefile
tests/contracts/tx_vec/src/: lib.rs
tests/contracts/verify_proof/: Cargo.toml
tests/contracts/verify_proof/src/: lib.rs
tests/contracts_backup/stack/: Cargo.toml
tests/contracts_backup/stack/src/: lib.rs
tests/minimal-abi/: Cargo.toml  Xargo.toml
tools/gas-report/: Cargo.toml
tools/gas-report/src/: main.rs
tools/printwat/: Cargo.toml
vm-poc/: Cargo.toml
vm-poc/contracts/complex/: Cargo.toml
vm-poc/contracts/complex/src/: lib.rs
vm-poc/contracts/fibonacci/: Cargo.toml
vm-poc/contracts/plutocracy/: Cargo.toml
vm-poc/contracts/plutocracy/src/: lib.rs
vm-poc/src/: definitions.rs  host.rs  lib.rs
vm-poc/tests/: complex.rs  fibonacci.rs  pluto.rs
(+46 files in other folders)
