[package]
name = "rusk-vm"
version = "0.12.0-rc.0"
authors = [
  "Kristoffer Ström <kristoffer@dusk.network>",
  "zer0 <matteo@dusk.network>",
  "Milosz Muszynski <milosz@dusk.network>",
  "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2018"
repository = "https://github.com/dusk-network/rusk-vm"
description = "Rusk VM is the virtual machine running Dusk Network's Smart contracts"
license = "MPL-2.0"

[dependencies]
wasmparser = "0.81"
failure = "0.1"
dusk-abi = "0.11"
canonical = "0.7"
canonical_derive = "0.7"
dusk-hamt = "0.10.0-rc"
microkelvin = { version = "0.15.0-rc", features = ["persistence"] }
wasmer = "2.1"
wasmer-vm = "2.1"
wasmer-engine-universal = "2.1"
wasmer-middlewares = "2.1"
cached = "0.26"
thiserror = "1.0"
tracing = "0.1"
loupe = "0.1"
once_cell = "1.9"
parking_lot = "0.12"

[target.'cfg(target_arch = "x86_64")'.dependencies]
wasmer-compiler-singlepass = "2.1"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
wasmer-compiler-cranelift = "2.1"

[dev-dependencies]
dusk-bls12_381 = "0.9"
dusk-bytes = "0.1"
criterion = "0.3"

# test contracts
counter = { path = "tests/contracts/counter" }
fibonacci = { path = "tests/contracts/fibonacci" }
delegator = { path = "tests/contracts/delegator" }
stack = { path = "tests/contracts/stack" }
block_height = { path = "tests/contracts/block_height" }
self_snapshot = { path = "tests/contracts/self_snapshot" }
host_fn = { path = "tests/contracts/host_fn" }
tx_vec = { path = "tests/contracts/tx_vec" }
caller = { path = "tests/contracts/caller" }
callee_1 = { path = "tests/contracts/callee-1" }
callee_2 = { path = "tests/contracts/callee-2" }
gas_consumed = { path = "tests/contracts/gas_consumed" }
counter_float = { path = "tests/contracts/counter_float" }
gas_context = { path = "tests/contracts/gas_context" }
map = { path = "tests/contracts/map" }

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "stack"
harness = false

[workspace]
members = [
    "tests/contracts/*",
    "test_runner"
]
exclude = ["test_runner"]
