[package]
name = "rusk-vm"
version = "0.8.0-rc.0"
authors = [
  "Kristoffer Ström <kristoffer@dusk.network>",
  "zer0 <matteo@dusk.network>",
  "Milosz Muszynski <milosz@dusk.network>",
  "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2018"
repository = "https://github.com/dusk-network/rusk-vm"
description = "Rusk VM is the virtual machine running Dusk Network's Smart contracts"
license = "MPL-2.0"

[dependencies]
wasmparser = "0.81"
failure = "0.1"
dusk-hamt = "0.7"
microkelvin = "0.13.0-rc.1"
wasmer = "=2.0"
wasmer-vm = "2.0"
wasmer-compiler-singlepass = "2.0"
wasmer-engine-universal = "2.0"
wasmer-middlewares = "2.0"
wasmer-types = "2.0"
cached = "0.26"
thiserror = "1.0"
tracing = "0.1"
loupe = "0.1"
rusk-uplink = { path = "rusk-uplink" }
rusk-uplink_derive = { path = "./rusk-uplink_derive"}
rkyv = { version = "0.7", default-features = false, features = ["alloc"] }
bytecheck = { version = "0.6", default-features = false }
derive-new = "0.5"

[dev-dependencies]
criterion = "0.3"

register = { path = "tests/contracts/register" }
minimal_counter = { path = "tests/contracts/minimal_counter" }
string_argument = { path = "tests/contracts/string_argument" }
fibonacci = { path = "tests/contracts/fibonacci" }
delegator = { path = "tests/contracts/delegator" }
block_height = { path = "tests/contracts/block_height"}
caller = { path = "tests/contracts/caller" }
callee_1 = { path = "tests/contracts/callee-1" }
callee_2 = { path = "tests/contracts/callee-2" }
gas_consumed = { path = "tests/contracts/gas_consumed" }
tx_vec = { path = "tests/contracts/tx_vec" }
self_snapshot = { path = "tests/contracts/self_snapshot" }
gas_context = { path = "tests/contracts/gas_context" }
counter = { path = "tests/contracts/counter" }
stack = { path = "tests/contracts/stack" }

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "stack"
harness = false

[workspace]

members = [
    "tests/contracts/*",
    "rusk-uplink",
    "rusk-uplink_derive",
]

[patch.crates-io]
microkelvin = { git = "https://github.com/dusk-network/microkelvin.git", branch = "main"}