[package]
name = "dusk-abi"
version = "0.3.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[dependencies]
canonical = "0.5"
canonical_derive = "0.5"
wee_alloc = "0.4"

[dev-dependencies]
canonical_fuzz = "0.5"
canonical_host = "0.5"
arbitrary = "0.3"

[features]
std = []
