[package]
name = "dusk-abi"
version = "0.3.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[dependencies]
canonical = "0.5"
canonical_derive = "0.5"
wee_alloc = "0.4"

dusk-poseidon = {version = "0.18", default-features = false}
dusk-bls12_381 = { version = "0.6", default-features = false }
dusk-bytes = "0.1"

[dev-dependencies]
canonical_fuzz = "0.5"
canonical_host = "0.5"
arbitrary = "0.3"

[features]
std = []
