[package]
name = "rusk-uplink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microkelvin = { version = "0.12.0-rc", default-features = false } 
rkyv = { version = "0.7.26", default-features = false, features = ["alloc", "validation"] }
dusk-hamt = "0.6.0-rc"
parking_lot = { version = "0.11.1" }
bytecheck = { version = "0.6.7", default-features = false }
