[package]
name = "vm-poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.9" }
wasmer = { version = "2.0.0", optional = true }

[dev-dependencies]
fibonacci = { path = "contracts/fibonacci" }
plutocracy = { path = "contracts/plutocracy" }

[features]
default = ["host"]
host = ["wasmer"]