[package]
name = "add"
version = "0.1.0"
authors = ["modality <modality@gmail.com>"]
edition = "2018"

[lib]
 crate-type = ["cdylib", "rlib"]

[dependencies]
 dusk-abi = { path = "../../dusk-abi", default-features = false }
 serde = { version = "*", default-features = false, features = ["derive"] }
