[package]
name = "factorial"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-abi = { path = "../../dusk-abi", default-features = false }
serde = { version = "*", default-features = false, features = ["derive"] }
