[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusk-vm = { path = "../..", features = ["persistence"] }
counter = { path = "../../tests/contracts/counter" }
microkelvin = { version = "0.10", features = ["persistence"] }