[package]
name = "gas-report"
version = "0.1.0"
edition = "2018"

[dependencies]
canonical = "0.6"
nstack = "0.10"
minimal = { path = "../../tests/contracts/minimal" }
minimal_poseidon = { path = "../../tests/contracts/minimal_poseidon" }
rusk-vm = { path = "../../" }
dusk-poseidon = { version = "0.22", features = ["canon"] }