[package]
name = "block_height"
version = "0.1.0"
authors = ["zer0 <matteo@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { version = "0.5", default-features = false }
canonical_derive = "0.5"
canonical_host = { version = "0.5", optional = true }

dusk-abi = "0.7"

[features]
host = ["canonical_host"]
