[package]
name = "block_height"
version = "0.1.0"
authors = ["zer0 <matteo@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../../canonical/canon" }
canonical_derive = { path = "../../../../canonical/canon_derive" }
dusk-abi = { path = "../../../../dusk-abi" }
