[package]
name = "callee_2"
version = "0.1.0"
authors = [
    "zer0 <matteo@dusk.network",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
microkelvin = { version = "0.12.0-rc", default-features = false }
rusk-uplink = { path = "../../../rusk-uplink" }
rkyv = { version = "0.7.20", default-features = false, features = ["archive_le", "size_32"] }
