[package]
name = "factorial"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-abi = { git = "https://github.com/dusk-network/dusk-abi", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
