[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../../canonical/canon" }
canonical_derive = { path = "../../../../canonical/canon_derive" }

dusk-abi = "0.7"
