[package]
name = "minimal_poseidon"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = "0.6"
canonical_derive = "0.6"
nstack = "0.10"
dusk-abi = "0.9"

dusk-poseidon = { version = "0.22", default-features = false, features = ["canon"] }
dusk-bls12_381 = { default-features = false, version = "*", features = ["canon"] }