[package]
name = "minimal_transfer"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = "0.6"
canonical_derive = "0.6"
nstack = "0.10"
dusk-hamt = "0.5.0-rc"
dusk-abi = "0.9"

dusk-poseidon = { version = "0.22", default-features = false, features = ["canon"] }
dusk-bls12_381 = { default-features = false, version = "*", features = ["canon"] }
dusk-pki = { version = "0.8.0-rc", default-features = false }
phoenix-core = { version = "0.13.0-rc", default-features = false, features = ["canon"] }
dusk-bytes = "0.1"