[package]
name = "register"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusk-uplink = { path = "../../../rusk-uplink", default-features = false }
microkelvin = { version = "0.12.0-rc", default-features = false }
rkyv = { version = "0.7", default-features = false }
dusk-hamt = { path = "../../../../dusk-hamt" }
bytecheck = { version = "0.6.7", default-features = false }
