[package]
name = "register"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#microkelvin = { version = "0.16.0-rkyv.1", default-features = false }
#microkelvin = { git = "https://github.com/dusk-network/microkelvin.git", branch = "vm2-large-buffer-support" }
microkelvin = { path = "../../../../microkelvin" }
rusk-uplink = { path = "../../../rusk-uplink", default-features = false }
rkyv = { version = "0.7", default-features = false }
dusk-hamt = { path = "../../../../dusk-hamt" }
bytecheck = { version = "0.6.7", default-features = false }
rusk-uplink_derive = { path = "../../../rusk-uplink_derive" }
derive-new = "0.5"
