[package]
name = "stack"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#microkelvin = { version = "0.13.0-rc", default-features = false }
microkelvin = { git = "https://github.com/dusk-network/microkelvin.git", branch = "vm2-error-port", features = ["host"] }
rusk-uplink = { path = "../../../rusk-uplink" }
rusk-uplink_derive = { path = "../../../rusk-uplink_derive" }
rkyv = { version = "0.7.20", default-features = false, features = ["archive_le", "size_32"] }
nstack = { version = "0.12.0-rc" }
bytecheck = { version = "0.6.7", default-features = false }
derive-new = "0.5"


#[patch.crates-io]
#nstack = { path = "../../../../nstack" }
#microkelvin = { path = "../../../../microkelvin" }
