[package]
name = "tx_vec"
version = "0.1.0"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { version = "0.5", default-features = false }
canonical_derive = "0.5"
canonical_host = { version = "0.5", optional = true }

dusk-abi = { path = "../../../../dusk-abi" }
[features]
host = ["canonical_host"]
