[package]
name = "tx_vec"
version = "0.1.0"
authors = [
    "Victor Lopez <victor@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusk-uplink = { path = "../../../rusk-uplink" }
rusk-uplink_derive = { path = "../../../rusk-uplink_derive" }
rkyv = { version = "0.7.20", default-features = false, features = ["archive_le", "size_32"] }
derive-new = "0.5"
