[package]
name = "verify_proof"
version = "0.1.0"
authors = ["CPerezz <carlos@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { version = "0.5", default-features = false }
canonical_derive = "0.5"
canonical_host = { version = "0.5", optional = true }

dusk-bls12_381 = {version = "0.6", default-features = false }
dusk-abi = "0.4"

[features]
host = ["canonical_host"]

