[package]
name = "stack"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canonical = { path = "../../../../canonical/canon", default-features = false }
canonical_derive = { path = "../../../../canonical/canon_derive" }

nstack = { path = "../../../../nstack" }
microkelvin = { path = "../../../../microkelvin" }
dusk-abi = { path = "../../../../dusk-abi" }

[features]
host = ["canonical/host"]
