[package]
name = "fee"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-abi = { path = "../../../../dusk-abi", default-features = false }
phoenix-abi = { path = "../../../../../phoenix-abi", default-features = false }
serde = { version = "*", default-features = false, features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
